--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="name_section">Название раздела</string>
     <string name="name_locality">Название локации</string>
+    <string name="delete">Удалить</string>
+    <string name="title_activity_next">NextActivity</string>
 </resources>
